# debug-rust-fil-proofs-segmentation-fault

./: .gitignore  1.txt  Cargo.toml  build.rs
src/: main.rs
