[package]
name = "debug-rust-fil-proofs-segmentation-fault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filecoin-proofs-api = { version = "12.0", default-features = false }
fvm_shared = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
anyhow = "1"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[features]
default = ["opencl", "multicore-sdr"]
opencl = ["filecoin-proofs-api/opencl"]
cuda = ["filecoin-proofs-api/cuda"]
multicore-sdr = ["filecoin-proofs-api/multicore-sdr"]
